@@ -12,6 +12,9 @@ Version 1.0
 * Store data in external table to be able to filter on it
 * Datatype is now sortable (by address)
 * Added Extended attribute filter to fetch list / tree by cordinates and distance
+* Added support for sorting by distance when using Extended attribute filter
+* Added support for arccosine and pythagorean distance algorithm in distance
+  calculation in the Extended attribute filter in addition to bounding box
 
 
 Version 0.5
